# loanpractice

./: .gitignore  README.md  kaggle_best_model.ipynb  log_runs.py  main.py  pyproject.toml  requirements.txt  run_experiments.py  train.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: sample_test.csv  sample_train.csv
docs/: project_tutorial.md
src/: __init__.py  data_preprocessing.py  deep_learning.py  ensemble.py  models.py
