[project]
name = "loanpractice"
version = "0.1.0"
description = "Loan prediction models and training pipelines"
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "catboost>=1.1.0",
    "tensorflow>=2.10.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
