[project]
name = "loanpractice"
version = "0.1.0"
description = "Loan prediction models and training pipelines"
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "catboost>=1.1.0",
    "torch==2.4.1+cpu",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "*.py", "README.md", "data", "credit_risk_dataset.csv", "playground-series-s4e10"]
